--- a/ui_hard.ui
+++ b/ui_hard.ui
@@ -6,12 +6,12 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>325</width>
+    <width>387</width>
     <height>293</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>MainWindow</string>
+   <string>Hard Mode</string>
   </property>
   <property name="styleSheet">
    <string notr="true">background: #151515;
@@ -22,7 +22,7 @@
    <widget class="QPushButton" name="oneButton">
     <property name="geometry">
      <rect>
-      <x>60</x>
+      <x>20</x>
       <y>110</y>
       <width>91</width>
       <height>81</height>
@@ -39,10 +39,10 @@ color: #e7e7e7;</string>
      <string>+1</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="twoButton">
+   <widget class="QPushButton" name="threeButton">
     <property name="geometry">
      <rect>
-      <x>170</x>
+      <x>130</x>
       <y>110</y>
       <width>91</width>
       <height>81</height>
@@ -56,7 +56,7 @@ text-align: center;
 color: #e7e7e7;</string>
     </property>
     <property name="text">
-     <string>+2</string>
+     <string>+3</string>
     </property>
    </widget>
    <widget class="QLabel" name="winNumLabel">
@@ -122,9 +122,9 @@ color: #e7e7e7;</string>
    <widget class="QLabel" name="turnLabel">
     <property name="geometry">
      <rect>
-      <x>60</x>
+      <x>80</x>
       <y>200</y>
-      <width>201</width>
+      <width>181</width>
       <height>31</height>
      </rect>
     </property>
@@ -139,13 +139,73 @@ color: #e7e7e7;</string>
      <string>YOUR TURN</string>
     </property>
    </widget>
+   <widget class="QPushButton" name="genButton">
+    <property name="geometry">
+     <rect>
+      <x>270</x>
+      <y>30</y>
+      <width>91</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">font-family: 'Helvetica Neue', sans-serif;
+font-weight: bold;
+font-size: 15px;
+text-align: center;
+color: #e7e7e7;</string>
+    </property>
+    <property name="text">
+     <string>GENERATE</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="fiveButton">
+    <property name="geometry">
+     <rect>
+      <x>240</x>
+      <y>110</y>
+      <width>91</width>
+      <height>81</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">font-family: 'Helvetica Neue', sans-serif;
+font-weight: bold;
+font-size: 30px;
+text-align: center;
+color: #e7e7e7;</string>
+    </property>
+    <property name="text">
+     <string>+5</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="quitButton">
+    <property name="geometry">
+     <rect>
+      <x>330</x>
+      <y>210</y>
+      <width>51</width>
+      <height>32</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">font-family: 'Helvetica Neue', sans-serif;
+font-weight: bold;
+font-size: 15px;
+text-align: center;
+color: red;</string>
+    </property>
+    <property name="text">
+     <string>QUIT</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>325</width>
+     <width>387</width>
      <height>22</height>
     </rect>
    </property>
