--- a/ui_easy.ui
+++ b/ui_easy.ui
@@ -6,12 +6,12 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>325</width>
-    <height>293</height>
+    <width>387</width>
+    <height>292</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>MainWindow</string>
+   <string>Easy Mode</string>
   </property>
   <property name="styleSheet">
    <string notr="true">background: #151515;
@@ -122,9 +122,9 @@ color: #e7e7e7;</string>
    <widget class="QLabel" name="turnLabel">
     <property name="geometry">
      <rect>
-      <x>60</x>
+      <x>70</x>
       <y>200</y>
-      <width>201</width>
+      <width>181</width>
       <height>31</height>
      </rect>
     </property>
@@ -139,13 +139,53 @@ color: #e7e7e7;</string>
      <string>YOUR TURN</string>
     </property>
    </widget>
+   <widget class="QPushButton" name="genButton">
+    <property name="geometry">
+     <rect>
+      <x>270</x>
+      <y>30</y>
+      <width>91</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">font-family: 'Helvetica Neue', sans-serif;
+font-weight: bold;
+font-size: 15px;
+text-align: center;
+color: #e7e7e7;</string>
+    </property>
+    <property name="text">
+     <string>GENERATE</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="quitButton">
+    <property name="geometry">
+     <rect>
+      <x>330</x>
+      <y>210</y>
+      <width>51</width>
+      <height>32</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">font-family: 'Helvetica Neue', sans-serif;
+font-weight: bold;
+font-size: 15px;
+text-align: center;
+color: red;</string>
+    </property>
+    <property name="text">
+     <string>QUIT</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>325</width>
+     <width>387</width>
      <height>22</height>
     </rect>
    </property>
